added Gemfiles+latex stuff to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,9 @@ output
 *.log
 *.diff
 .vscode
-
-
+bundle
+Gemfile.lock
+Gemfile
 
 # File created using '.gitignore Generator' for Visual Studio Code: https://bit.ly/vscode-gig
 
