--- a/Rules
+++ b/Rules
@@ -9,7 +9,6 @@ require 'scholarmarkdown/filter/labelify'
 require 'scholarmarkdown/filter/references_to_footer'
 require 'scholarmarkdown/filter/headerids_to_section'
 require 'scholarmarkdown/filter/citation_metadata'
-
 Encoding.default_external = "UTF-8"
 
 compile '/index.*' do
@@ -17,6 +16,7 @@ compile '/index.*' do
   filter :scholar_citation, bibfile: items['/references.bib'],
                             style: 'lncs-custom'
   filter :kramdown
+  filter :colorize_syntax, default_colorizer: :rouge
   filter :scholar_hyphenate_iri
   filter :scholar_include_code
   filter :scholar_labelify
