--- a/Rules
+++ b/Rules
@@ -9,14 +9,21 @@ require 'scholarmarkdown/filter/labelify'
 require 'scholarmarkdown/filter/references_to_footer'
 require 'scholarmarkdown/filter/headerids_to_section'
 require 'scholarmarkdown/filter/citation_metadata'
+require 'scholarmarkdown/preprocess/katex'
 
+preprocess do
+  preprocess_katex_assets
+end
 Encoding.default_external = "UTF-8"
 
 compile '/index.*' do
   filter :erb
   filter :scholar_citation, bibfile: items['/references.bib'],
                             style: 'lncs-custom'
-  filter :kramdown
+  filter :kramdown, math_engine: 'sskatex',
+                            math_engine_opts: {
+                              :katex_js=> File.join(Katex.gem_path, 'vendor', 'katex', 'javascripts', 'katex.js')
+                            }
   filter :colorize_syntax, default_colorizer: :rouge
   filter :scholar_hyphenate_iri
   filter :scholar_include_code
